--- a/article/index.html
+++ b/article/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 id="headerstyle">Walt Disney World</h1>
-        <img src="img/CinderellaCastle.jpg" alt="Cinderella's Castle in Magic Kingdom">
+        <img src="img/cinderella.jpg" alt="Cinderella's Castle in Magic Kingdom">
     </header>
     <main>
         <section>
