--- a/midterm/index.html
+++ b/midterm/index.html
@@ -17,13 +17,14 @@
 </head>
 
 <body>
-
-    <img src="images/outkast.gif" alt="Outkast" class="img-fluid">
-    <div>
-        <h1><span>Outkast</span> in charts</h1>
-        <h2>A look at Outkast's history through the lens of data</h2>
-        <p>By Matt Daniels</p>
-    </div>
+    <header>
+        <img src="images/outkast.gif" alt="Outkast" class="img-fluid">
+        <div>
+            <h1><span>Outkast</span> in charts</h1>
+            <h2>A look at Outkast's history through the lens of data</h2>
+            <p>By Matt Daniels</p>
+        </div>
+    </header>
     <!---->
     <!---->
     <h3>The birth of southern slang</h3>
