--- a/midterm/index.html
+++ b/midterm/index.html
@@ -20,7 +20,7 @@
     <header>
         <img src="images/outkast.gif" alt="Outkast" class="img-fluid">
         <div>
-            <h1><span><b>OUTKAST</b></span> <br>in charts</br></h1>
+            <h1><span class="logo">OUTKAST</span> <br>in charts</br></h1>
             <h2>A look at Outkast's history through the lens of data</h2>
             <p>By Matt Daniels</p>
         </div>
