--- a/midterm/index.html
+++ b/midterm/index.html
@@ -74,7 +74,7 @@
             Outkast’s southern roots brought to hip hop. </p>
         <!---->
     </section>
-    <section class="container-fluid chart">
+    <section class="container-fluid">
         <p class="col-md-2">Outkast are from East Point and went to Tri-Cities HS. Outkast became a staple for the south since their music frequently references neighboring communities, such as College Park and Decatur, or businesses, such as strip club Magic City. </p>
         <img src="images/map.png" alt="Map" class="img-fluid col-md-7">
     </section>
@@ -100,7 +100,7 @@
             personal changes, adopting veganism and leaving the drinking/drugs lifestyle. By Aquemini, he’s
             experimenting with new musical styles and growing tired of rapping. </p>
     </section>
-    <section class="container-fluid chart">
+    <section class="container-fluid">
         <!---->
         <!--chart starts here-->
         <h4>'94</h4>
