--- a/midterm/index.html
+++ b/midterm/index.html
@@ -74,7 +74,7 @@
             Outkast’s southern roots brought to hip hop. </p>
         <!---->
     </section>
-    <section class="container-fluid">
+    <section class="row container-fluid justify-content-center align-items-center">
         <p class="col-md-2">Outkast are from East Point and went to Tri-Cities HS. Outkast became a staple for the south since their music frequently references neighboring communities, such as College Park and Decatur, or businesses, such as strip club Magic City. </p>
         <img src="images/map.png" alt="Map" class="img-fluid col-md-7">
     </section>
@@ -100,30 +100,38 @@
             personal changes, adopting veganism and leaving the drinking/drugs lifestyle. By Aquemini, he’s
             experimenting with new musical styles and growing tired of rapping. </p>
     </section>
-    <section class="container-fluid">
+    <section class="row container-fluid justify-content-center">
         <!---->
         <!--chart starts here-->
+        <div class="col-md-3">
         <h4>'94</h4>
-        <img src="images/94.jpg" alt="1994" class="img-fluid col-md-3">
+        <img src="images/94.jpg" alt="1994" class="img-fluid">
         <p>- Attempt to represent (and give respect to) the South<br> - 17-year-olds making it up as
             they
             go<br> - Create a new sound with P-Funk</p>
+        </div>
         <!---->
+        <div class="col-md-3">
         <h4>'96</h4>
-        <img src="images/96.jpg" alt="1996" class="img-fluid col-md-3">
+        <img src="images/96.jpg" alt="1996" class="img-fluid">
         <p>- Tension from the boos at ’95 Source Awards <br> - Andre’s with Erykah Badu, adopts
             veganism,
             and explores Nuwaubian Nation<br> - Darker melodies from the death of Big’s aunt/mother.
         </p>
+        </div>
         <!---->
+        <div class="col-md-3">
         <h4>'98</h4>
-        <img src="images/98.jpg" alt="1998" class="img-fluid col-md-3">
+        <img src="images/98.jpg" alt="1998" class="img-fluid">
         <p>- Andre and Big Boi have kids <br> - Tension from breakup rumors <br> - Tension from Andre’s
             rejection of gangsta lifestyle <br> - Andre’s experimentation with singing </p>
         <!---->
+        </div>
+        <div class="col-md-3">
         <h4>'00</h4>
-        <img src="images/00.jpg" alt="2000" class="img-fluid col-md-3">
+        <img src="images/00.jpg" alt="2000" class="img-fluid">
         <p>- Andre-Erykah breakup (Ms. Jackson) <br> - Andre’s tired of hip hop – less rapping </p>
+        </div>
     </section>
     <section class="container">
         <!--chart ends here-->
