--- a/midterm/index.html
+++ b/midterm/index.html
@@ -19,11 +19,11 @@
 <body>
     <header>
         <img src="images/outkast.gif" alt="Outkast" class="img-fluid">
-        <div>
+        <section class="top">
             <h1><span class="logo">OUTKAST</span> <br>in charts</br></h1>
             <h2>A look at Outkast's history through the lens of data</h2>
             <p>By Matt Daniels</p>
-        </div>
+        </section>
     </header>
     <section class="container">
         <!---->
@@ -106,7 +106,7 @@
         <!---->
         <!--chart starts here-->
         <div class="col-md-3 chart">
-            <h4>'94</h4>
+            <h4 class="text-center">'94</h4>
             <img src="images/94.jpg" alt="1994" class="img-fluid">
             <p>- Attempt to represent (and give respect to) the South<br> - 17-year-olds making it up as
                 they
@@ -114,7 +114,7 @@
         </div>
         <!---->
         <div class="col-md-3 chart">
-            <h4>'96</h4>
+            <h4 class="text-center">'96</h4>
             <img src="images/96.jpg" alt="1996" class="img-fluid">
             <p>- Tension from the boos at ’95 Source Awards <br> - Andre’s with Erykah Badu, adopts
                 veganism,
@@ -123,14 +123,14 @@
         </div>
         <!---->
         <div class="col-md-3 chart">
-            <h4>'98</h4>
+            <h4 class="text-center">'98</h4>
             <img src="images/98.jpg" alt="1998" class="img-fluid">
             <p>- Andre and Big Boi have kids <br> - Tension from breakup rumors <br> - Tension from Andre’s
                 rejection of gangsta lifestyle <br> - Andre’s experimentation with singing </p>
             <!---->
         </div>
         <div class="col-md-3 chart">
-            <h4>'00</h4>
+            <h4 class="text-center">'00</h4>
             <img src="images/00.jpg" alt="2000" class="img-fluid">
             <p>- Andre-Erykah breakup (Ms. Jackson) <br> - Andre’s tired of hip hop – less rapping </p>
         </div>
