--- a/midterm/index.html
+++ b/midterm/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="text-center">
         <img src="images/outkast.gif" alt="Outkast" class="img-fluid">
         <section class="top">
             <h1><span class="logo">OUTKAST</span> <br>in charts</br></h1>
