--- a/midterm/index.html
+++ b/midterm/index.html
@@ -19,11 +19,11 @@
 <body>
     <header class="text-center">
         <img src="images/outkast.gif" alt="Outkast" class="img-fluid">
-        <section class="top">
+        <div>
             <h1><span class="logo">OUTKAST</span> <br>in charts</br></h1>
             <h2>A look at Outkast's history through the lens of data</h2>
             <p>By Matt Daniels</p>
-        </section>
+        </div>
     </header>
     <section class="container">
         <!---->
@@ -54,12 +54,13 @@
             (Outkast’s
             first single in ’94) and bringing Kangol hats back to NYC. </p>
 
-
-        <iframe style="border-radius:12px"
-            src="https://open.spotify.com/embed/track/3HTaKftetB9nQ4Vv3KnmvU?utm_source=generator" width="100%"
-            height="152" frameBorder="0" allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
+        <section>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/track/3HTaKftetB9nQ4Vv3KnmvU?utm_source=generator" width="100%"
+                height="152" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+        </section>
 
         <p> Outkast's sound became even more distinct when they began producing their own music on ATLiens
             (their
@@ -169,7 +170,6 @@
             src="https://open.spotify.com/embed/track/3sQDstyMhCcDJ3mY6onZez?utm_source=generator" width="100%"
             height="152" frameBorder="0" allowfullscreen=""
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
 
         <p>You hear this creative tension throughout Aquemini and Stankonia. When Outkast produced B.O.B., Big Boi
             worried that their base, hardcore hip hop fans in ATL’s hardest neighborhoods, would reject the heavy
