--- a/midterm/index.html
+++ b/midterm/index.html
@@ -54,13 +54,10 @@
             (Outkast’s
             first single in ’94) and bringing Kangol hats back to NYC. </p>
 
-        <section>
-            <iframe style="border-radius:12px"
-                src="https://open.spotify.com/embed/track/3HTaKftetB9nQ4Vv3KnmvU?utm_source=generator" width="100%"
-                height="152" frameBorder="0" allowfullscreen=""
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"></iframe>
-        </section>
+        <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/track/3HTaKftetB9nQ4Vv3KnmvU?utm_source=generator" width="100%"
+            height="152" frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
         <p> Outkast's sound became even more distinct when they began producing their own music on ATLiens
             (their
