--- a/final/index.html
+++ b/final/index.html
@@ -18,23 +18,71 @@
 </head>
 
 <body>
-    <header class="text-center">
-        <div>
-            <h1>The Streaming Shift</h1>
-            <p>By Harrison Deitz</p>
+    <header>
+        <div class="row nav justify-content-left align-items-center">
+            <div class="col-md-6">
+                <img src="images/netflix.jpeg" alt="Netflix User Interface" class="img-fluid">
+                <p>Netflix's User Interface<br>Source: Gabby Jones/Bloomberg</a> </p>
+            </div>
+            <div class="col-md-6 text-center">
+                <h1>The Streaming Shift</h1>
+                <h2>By Harrison Deitz</h2>
+            </div>
         </div>
     </header>
     <section class="container">
-        <p>In 2007, Netflix, a company known for its DVD delivery service, gave its subscribers a new way to watch movies: through streaming. Initially, only 1,000 titles were available to customers as a bonus to their mail subscriptions, which they could only watch on computers.</p>
-        <p>However, since 2007, the streaming side of Netflix has evolved from being merely a feature to the company’s main focus. Eventually, in 2023, Netflix stopped delivering DVDs altogether</p>
-        <p>Today, Netflix has thousands of movies and television series on its streaming platform, which is available on numerous devices, including televisions, smartphones, tablets, and gaming devices. Its service now features original content created by Netflix, in addition to titles made by other companies. Netflix’s subscribers have also increased tremendously since streaming was introduced. In 2007, the same year Netflix started streaming, it had just under 8 million subscribers, and in Q3 2024, it reached 282 million globally.</p>
-        <p>With Netflix’s great success, other companies followed with their own services. These platforms have reshaped the way audiences consume movies, giving them unmatched convenience. Their impact can be seen in data.</p>
-        <p>One of the biggest impacts streaming has had is on the physical media market (DVDs, Blu-ray discs, etc.). After movies leave theaters, they quickly arrive on streaming services, where customers have access to large libraries of content with just one payment. Since consumers know they can soon watch a film for free with a streaming subscription they are already paying for, they have little incentive to buy a copy. As streaming has continued to grow in popularity, physical media sales have dropped significantly as the years go by.</p>
-        <p>While the impact of streaming on movie theater attendance is not as significant as its effect on the physical media market, there still is a correlation. Yearly domestic movie ticket sales have yet to reach the levels seen in 2007. While the COVID-19 pandemic contributed to the sharp sales decline in 2020 as theaters closed nationwide, it is important to note that attendance is yet to come close to pre-pandemic numbers in the United States. This could be because the pandemic cemented streaming as the preferred alternative for many moviegoers. </p>
-        <p>While the future of streaming looks bright, it is a toss-up for what’s coming next for physical media and movie theaters.</p>
-        <p>As DVD and Blu-ray sales continue to decline, retailers like Target are carrying fewer of them, while Best Buy has completely stopped selling them. However, with some content being removed from streaming services, physical media could attract a niche audience that will purchase discs to gain access to desired titles.</p>
-        <p>In this day and age, more movies are being released exclusively on streaming. With fewer people going to movie theaters than years ago, it's possible that digital releases will eventually become the norm. But, theater chains like AMC and Regal are investing hundreds of millions of dollars into upgrading their locations, aiming to offer "premium" experiences that can’t be replicated at home, in an effort to draw movie fans back to cinemas.</p>
+        <p>In 2007, Netflix, a company known for its DVD delivery service, gave its subscribers a new way to watch
+            movies: through streaming. Initially, only 1,000 titles were available to customers as a bonus to their mail
+            subscriptions, which they could only watch on computers.</p>
+        <p>However, since 2007, the streaming side of Netflix has evolved from being merely a feature to the company’s
+            main focus. Eventually, in 2023, Netflix stopped delivering DVDs altogether</p>
+        <p>Today, Netflix has thousands of movies and television series on its streaming platform, which is available on
+            numerous devices, including televisions, smartphones, tablets, and gaming devices. Its service now features
+            original content created by Netflix, in addition to titles made by other companies. Netflix’s subscribers
+            have also increased tremendously since streaming was introduced. In 2007, the same year Netflix started
+            streaming, it had just under 8 million subscribers, and in Q3 2024, it reached 282 million globally.</p>
+        <p>With Netflix’s great success, other companies followed with their own services. These platforms have reshaped
+            the way audiences consume movies, giving them unmatched convenience. Their impact can be seen in data.</p>
+        <p>One of the biggest impacts streaming has had is on the physical media market (DVDs, Blu-ray discs, etc.).
+            After movies leave theaters, they quickly arrive on streaming services, where customers have access to large
+            libraries of content with just one payment. Since consumers know they can soon watch a film for free with a
+            streaming subscription they are already paying for, they have little incentive to buy a copy. As streaming
+            has continued to grow in popularity, physical media sales have dropped significantly as the years go by.</p>
+
+        <div class="center-chart">
+            <img src="images/titles.png" alt="Annual Total Unit Sales of Top Ten U.S. Video Titles" class="img-fluid">
+        </div>
+
+        <p>While the impact of streaming on movie theater attendance is not as significant as its effect on the physical
+            media market, there still is a correlation. Yearly domestic movie ticket sales have yet to reach the levels
+            seen in 2007. While the COVID-19 pandemic contributed to the sharp sales decline in 2020 as theaters closed
+            nationwide, it is important to note that attendance is yet to come close to pre-pandemic numbers in the
+            United States. This could be because the pandemic cemented streaming as the preferred alternative for many
+            moviegoers. </p>
+
+        <div class="center-chart">
+            <img src="images/tickets.png" alt="Yearly Domestic Movie Theater Ticket Sales" class="img-fluid">
+        </div>
+
+        <p>While the future of streaming looks bright, it is a toss-up for what’s coming next for physical media and
+            movie theaters.</p>
+        <p>As DVD and Blu-ray sales continue to decline, retailers like Target are carrying fewer of them, while Best
+            Buy has completely stopped selling them. However, with some content being removed from streaming services,
+            physical media could attract a niche audience that will purchase discs to gain access to desired titles.</p>
+
+        <div class="center-image">
+            <img src="images/walmart.jpg" alt="Walmart Movie Section" class="img-fluid">
+            <p>Walmart's Movie Section<br>Source: Harrison Deitz</a> </p>
+        </div>
+
+        <p>In this day and age, more movies are being released exclusively on streaming. With fewer people going to
+            movie theaters than years ago, it's possible that digital releases will eventually become the norm. But,
+            theater chains like AMC and Regal are investing hundreds of millions of dollars into upgrading their
+            locations, aiming to offer "premium" experiences that can’t be replicated at home, in an effort to draw
+            movie fans back to cinemas.</p>
     </section>
+
+    <p class="text-center">Copyright <a href="https://harrisondeitz.github.io/portfolio/">Harrison Deitz</a> 2024</p>
 </body>
 
 </html>
