--- a/final/index.html
+++ b/final/index.html
@@ -50,7 +50,7 @@
             has continued to grow in popularity, physical media sales have dropped significantly as the years go by.</p>
 
         <div class="center-chart">
-            <img src="images/titles.png" alt="Annual Total Unit Sales of Top Ten U.S. Video Titles" class="img-fluid">
+            <img src="images/units.png" alt="Annual Total Unit Sales of Top Ten U.S. Video Titles" class="img-fluid">
         </div>
 
         <p>While the impact of streaming on movie theater attendance is not as significant as its effect on the physical
